CSS variables don't work for colors in "border" property https://bugs.webkit.org/show_bug.cgi?id=192922

Reviewed by Simon Fraser.

Source/WebCore:

ParseColorFunction no longer consumes anything if the color was not valid.

Test: css-custom-properties-api/border-variable-parsing.html

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::parseColorFunction):

LayoutTests:

* css-custom-properties-api/border-variable-parsing-expected.html: Added.
* css-custom-properties-api/border-variable-parsing.html: Added.


Canonical link: https://commits.webkit.org/207548@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239516 268f45cc-cd09-0410-ab3c-d52691b4dbfc